--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,26 +75,13 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
+                                    <tr th:each="note : ${notes}">
                                         <td>
                                             <button type="button" class="btn btn-success">Edit</button>
-                                            <a class="btn btn-danger">Delete</a>
+                                            <a th:href="@{/delete/{note.noteId}}" class="btn btn-danger">Delete</a>
                                         </td>
-
-
-                                        <div th:each="note : ${notes}">
-                                            <span th:text="${note.getNoteTitle()}"></span>
-                                        </div>
-
-
-<!--                                        <h1 th:each="note : ${notes}" th:text="${note.title}"></h1>-->
-
-<!--                                        <th scope="row" th:each="note : ${notes}" th:text="${note.title}"></th>-->
-<!--                                        <h1 th:text="${note.title}"></h1>-->
-
-                                        <th scope="row">Example Note Title</th>
-
-                                        <td>Example Note Description </td>
+                                        <th scope="row" th:text="${note.noteTitle}"></th>
+                                        <td scope="row" th:text="${note.noteDescription}"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -110,15 +97,15 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" method="POST">
+                                        <form th:object="${note}" action="#" th:action="@{/home}" method="POST">
                                             <input type="hidden" name="noteId" id="note-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Title</label>
-                                                <input type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
+                                                <input type="text" name="title" th:field="*{noteTitle}" class="form-control" id="note-title" maxlength="20" required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="note-description" class="col-form-label">Description</label>
-                                                <textarea class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
+                                                <textarea th:field="*{noteDescription}" class="form-control" name="description" id="note-description" rows="5" maxlength="1000" required></textarea>
                                             </div>
                                             <button id="noteSubmit" type="submit" class="d-none"></button>
                                         </form>
