--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -78,7 +78,7 @@
                                     <tr th:each="note : ${notes}">
                                         <td>
                                             <button type="button" class="btn btn-success">Edit</button>
-                                            <a th:href="@{/delete/{note.noteId}}" class="btn btn-danger">Delete</a>
+<!--                                            <a th:href="@{/delete/{note.noteId}}" class="btn btn-danger">Delete</a>-->
                                         </td>
                                         <th scope="row" th:text="${note.noteTitle}"></th>
                                         <td scope="row" th:text="${note.noteDescription}"></td>
