--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,12 +40,13 @@
                                 </div>
                             </div>
                         </form>
+
                         <div class="table-responsive">
-                            <table class="table table-striped" id="fileTable">
+                            <table class="table table-striped" id="fileTable" th:each="file : ${files}">
                                 <thead>
                                     <tr>
                                         <th style="width: 20%" scope="col"></th>
-                                        <th style="width: 80%" scope="col">File Name</th>
+                                        <th style="width: 80%" scope="col" th:text="${file.fileName}">File Name</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -74,6 +75,7 @@
                                         <th style="width: 60%" scope="col">Description</th>
                                     </tr>
                                 </thead>
+
 <!--                                <tbody>-->
 <!--                                    <tr th:each="note : ${notes}">-->
 <!--                                        <td>-->
