added controller annotation

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -164,7 +164,11 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" method="POST">
+<!--                                        <form action="#" method="POST">-->
+<!--                                        <form action="#" th:action="@{/createCredential}" method="POST">-->
+                                        <form th:action="@{/create-credential}" method="POST">
+
+                                            <!--                                            th:object="${credential}"-->
                                             <input type="hidden" name="credentialId" id="credential-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">URL</label>
