working pre-user customization

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -54,7 +54,7 @@
                                     <td>
 <!--                                        <a th:href="@{'/download/' + ${file.fileId}}" target="_blank" class="btn btn-success">View</a>-->
                                         <a th:href="@{'/download/' + ${file.fileId}}" target="_blank" class="btn btn-success">View</a>
-                                        <a  class="btn btn-danger">Delete</a>
+                                        <a th:href="@{'/deleteFile/' + ${file.fileId}}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${file.fileName}" scope="row"></th>
                                 </tr>
@@ -76,21 +76,16 @@
                                         <th style="width: 60%" scope="col">Description</th>
                                     </tr>
                                 </thead>
-
-<!--                                <tbody>-->
-<!--                                    <tr th:each="note : ${notes}">-->
-<!--                                        <td>-->
-<!--                                            <button type="button" class="btn btn-success" th:onclick="showNoteModal([[${note}]])">Edit</button>-->
-
-
-
-<!--                                            &lt;!&ndash;                                            <button type="button" class="btn btn-success" onclick="showNoteModal(${note.noteId}, ${note.noteTitle}, ${note.noteDescription})">Edit</button>&ndash;&gt;-->
-<!--                                            <a th:href="@{'/delete/' + ${note.noteId}}" class="btn btn-danger">Delete</a>-->
-<!--                                        </td>-->
-<!--                                        <th scope="row" th:text="${note.noteTitle}"></th>-->
-<!--                                        <td scope="row" th:text="${note.noteDescription}"></td>-->
-<!--                                    </tr>-->
-<!--                                </tbody>-->
+                                <tbody>
+                                    <tr th:each="note : ${notes}">
+                                        <td>
+                                            <button type="button" class="btn btn-success" th:onclick="showNoteModal([[${note}]])">Edit</button>
+                                            <a th:href="@{'/deleteNote/' + ${note.noteId}}" class="btn btn-danger">Delete</a>
+                                        </td>
+                                        <th scope="row" th:text="${note.noteTitle}"></th>
+                                        <td scope="row" th:text="${note.noteDescription}"></td>
+                                    </tr>
+                                </tbody>
                             </table>
                         </div>
 
@@ -103,24 +98,24 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
-<!--                                    <div class="modal-body">-->
-<!--                                        <form th:object="${note}" action="#" th:action="@{/createNote}" method="POST">-->
-<!--                                            <input type="hidden" th:field="*{noteId}" name="noteId" id="note-id">-->
-<!--                                            <div class="form-group">-->
-<!--                                                <label for="note-title" class="col-form-label">Title</label>-->
-<!--                                                <input type="text" name="title" th:field="*{noteTitle}" class="form-control" id="note-title" maxlength="20" required>-->
-<!--                                            </div>-->
-<!--                                            <div class="form-group">-->
-<!--                                                <label for="note-description" class="col-form-label">Description</label>-->
-<!--                                                <textarea th:field="*{noteDescription}" class="form-control" name="description" id="note-description" rows="5" maxlength="1000" required></textarea>-->
-<!--                                            </div>-->
-<!--                                            <button id="noteSubmit" type="submit" class="d-none"></button>-->
-<!--                                        </form>-->
-<!--                                    </div>-->
-<!--                                    <div class="modal-footer">-->
-<!--                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>-->
-<!--                                    </div>-->
+                                    <div class="modal-body">
+                                        <form th:action="@{/createNote}" method="POST">
+                                            <input type="hidden" name="noteId" id="note-id">
+                                            <div class="form-group">
+                                                <label for="note-title" class="col-form-label">Title</label>
+                                                <input type="text" name="title" class="form-control" id="note-title" maxlength="20" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="note-description" class="col-form-label">Description</label>
+                                                <textarea class="form-control" name="description" id="note-description" rows="5" maxlength="1000" required></textarea>
+                                            </div>
+                                            <button id="noteSubmit" type="submit" class="d-none"></button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
