--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div id="logoutDiv">
                 <form action="#" th:action="@{/logout}" method="POST">
-                    <button type="submit" class="btn btn-secondary float-right">Logout</button>
+                    <button id="logout" type="submit" class="btn btn-secondary float-right">Logout</button>
                 </form>
             </div>
             <div id="contentDiv" style="clear: right;">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
+                        <button style="margin: 0.25em;" id="add-note" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                             + Add a New Note
                         </button>
 
@@ -79,10 +79,10 @@
                                 <tbody>
                                     <tr th:each="note : ${notes}">
                                         <td>
-                                            <button type="button" class="btn btn-success" th:onclick="showNoteModal([[${note}]])">Edit</button>
-                                            <a th:href="@{'/deleteNote/' + ${note.noteId}}" class="btn btn-danger">Delete</a>
+                                            <button id="edit-note" type="button" class="btn btn-success" th:onclick="showNoteModal([[${note}]])">Edit</button>
+                                            <a id="delete-note" th:href="@{'/deleteNote/' + ${note.noteId}}" class="btn btn-danger">Delete</a>
                                         </td>
-                                        <th scope="row" th:text="${note.noteTitle}"></th>
+                                        <th class="note-title-displayed" scope="row" th:text="${note.noteTitle}"></th>
                                         <td scope="row" th:text="${note.noteDescription}"></td>
                                     </tr>
                                 </tbody>
@@ -114,14 +114,14 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                        <button id="save-note" type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                        <button id="add-credential" style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
                             + Add a New Credential
                         </button>
 
@@ -138,8 +138,8 @@
                                 <tbody>
                                 <tr th:each="credential : ${credentials}" >
                                     <td>
-                                        <button type="button" class="btn btn-success" th:onclick="editCredentialModal([[${credential}]])">Edit</button>
-                                        <a th:href="@{'/deleteCredential/' + ${credential.credentialId}}" class="btn btn-danger">Delete</a>
+                                        <button id="edit-credential" type="button" class="btn btn-success" th:onclick="editCredentialModal([[${credential}]])">Edit</button>
+                                        <a id="delete-credential" th:href="@{'/deleteCredential/' + ${credential.credentialId}}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${credential.url}" scope="row"></th>
                                     <td th:text="${credential.username}"></td>
