--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -46,7 +46,7 @@
                         <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Enter Password" maxlength="20" required>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" id="submit-button" class="btn btn-primary">Sign Up</button>
             </form>
         </div>
     </body>
