--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,6 +25,9 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
+                        <div id="file-success-msg" th:if="${fileUploadSuccess}" th:text="${fileUploadSuccess}" class="alert alert-success" role="alert"/>
+                        <div id="file-delete-msg" th:if="${fileDeleteSuccess}" th:text="${fileDeleteSuccess}" class="alert alert-success" role="alert"/>
+                        <div id="file-error-msg" th:if="${fileError}" th:text="${fileError}" class="alert alert-danger" role="alert"/>
                         <form th:action="@{/file-upload}" enctype="multipart/form-data" method="POST">
                             <div class="container">
                                 <div class="row" style="margin: 1em;">
@@ -163,7 +166,7 @@
                                             <input type="hidden" name="credentialId" id="credential-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">URL</label>
-                                                <input type="text" name= "url" class="form-control" id="credential-url" maxlength="100" required>
+                                                <input id="credential-url" type="text" name= "url" class="form-control" maxlength="100" required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Username</label>
@@ -178,7 +181,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button id="save-credential" type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
